--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"pg": "^8.7.3",
 		"pg-hstore": "^2.3.4",
 		"pug": "^3.0.2",
+		"ramda": "^0.28.0",
 		"sequelize": "^6.21.0"
 	},
 	"devDependencies": {
